@@ -2,9 +2,11 @@ package com.queatz.ailaai.extensions
 
 import androidx.compose.runtime.Composable
 import androidx.compose.ui.platform.LocalDensity
+import androidx.compose.ui.res.stringResource
 import androidx.compose.ui.unit.Dp
 import androidx.compose.ui.unit.dp
 import com.ibm.icu.text.DecimalFormat
+import com.queatz.ailaai.R
 import kotlin.math.ceil
 import kotlin.math.roundToInt
 
@@ -23,3 +25,11 @@ val Dp.px: Int
 private val decimalFormat = DecimalFormat("#,###.##")
 
 fun Number.format() = decimalFormat.format(this)!!
+
+@Composable
+fun Int.formatMini() = when {
+    this < 1_000 -> toString()
+    this < 1_000_000 -> stringResource(R.string.x_thousands_mini, this)
+    this < 100_000_000 -> stringResource(R.string.x_millions_mini, this)
+    else -> stringResource(R.string.many)
+}
