@@ -653,6 +653,10 @@
     <string name="no_data">No data</string>
     <string name="view_source">View source</string>
     <string name="this_page_has_no_scripts">This page has no scripts</string>
+    <string name="many">Many</string>
+    <string name="x_thousands_mini">%1$sk</string>
+    <string name="x_millions_mini">%1$sm</string>
+    <string name="custom">Custom</string>
     <plurals name="drop_x_items">
         <item quantity="one">Drop %1$s item</item>
         <item quantity="other">Drop %1$s items</item>
