@@ -6,6 +6,7 @@
  - Link previews in messages
  - Edit messages
  - View script source
+ - React to stories
 
 0.9.81
 ======
